[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dbr"
authors = [
    {name = "Jackson Balch", email = "jrbalch543@yahoo.com"},
]
description = "Database reporting and updating through excel"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["database"]
license = {text = "license"}
dependencies = [
    "polars",
    "SQLAlchemy",
    "xlsxwriter",
    "cmd"
    ]
version = "0.1.0"

[tool.setuptools]
py-modules = []
